@@ -1,3 +1,7 @@
+2010-11-15  Ingo Renner  <ingo@typo3.org>
+
+	* Resolved issue #16388: Clean up installed services report
+
 2010-11-15  Christian Kuhn  <lolli@schwarzbu.ch>
 
 	* Added feature #16410: [Caching framework] Implement redis as cache backend
